--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ variables:
 jobs:
   - job: build_windows
     pool:
-      vmImage: vs2017-win2016
+      vmImage: windows-2019
     steps:
       - powershell: .\build.ps1
   - job: build_macos
